[[bin]]
name = 'vo-test'
path = 'src/main.rs'

[package]
authors = ['xie.jf <xie.jf@cidi.ai>']
edition = '2018'
name = 'vo-test'
version = '0.1.0'

[lib]
name = 'vo'
path = 'src/lib.rs'

[dependencies]
async-trait = '^0.1'
rand = '^0.7'
rand_distr = '^0.2'
chrono = '^0.4'

[dependencies.nalgebra]
version = '^0.22'

[dependencies.async-std]
features = ['attributes', 'unstable']
version = '^1.6'

[dependencies.opencv]
default-features = false
features = ['opencv-4', 'contrib', 'buildtime-bindgen']
version = '^0.43'
