[package]
authors = ['xie.jf <xie.jf@cidi.ai>']
edition = '2018'
name = 'vo-test'
version = '0.1.0'

[lib]
name = 'vo'
path = 'src/lib.rs'

[[bin]]
name = 'vo-test'
path = 'src/main.rs'

[dependencies]
async-trait = '0.1'
rand = '0.8'
rand_distr = '0.4'
chrono = '0.4'
futures = "0.3"

[dependencies.nalgebra]
version = '0.26'

[dependencies.async-std]
features = ['attributes', 'unstable']
version = '1.9'

[dependencies.opencv]
default-features = false
features = ['opencv-4', 'contrib', 'buildtime-bindgen']
version = '0.53'
